syntax = "proto3";

option csharp_namespace = "CatalogService.Grpc.Contracts.V2";

package catalog.v2;

service CatalogApi {
  rpc Ping (PingRequest) returns (PingResponse); // v2 changing unswer model: adding correlation_id and code

  // 1) Server streaming: server sends updates
  rpc WatchCatalog (WatchCatalogRequest) returns (stream CatalogUpdate);

  // 2) Client streaming: client sends a stream, server returns summary
  rpc UploadCatalogEvents (stream CatalogEvent) returns (UploadSummary);

  // 3) Bidirectional streaming
  rpc Chat (stream ChatMessage) returns (stream ChatMessage);
}

message PingRequest {
  string message = 1;
  string correlation_id = 2; // new field — backward compatible
}

message PingResponse {
  string message = 1;
  int64 server_time_unix_ms = 2;
  string correlation_id = 3; // new field
  int32 code = 4; // new field — result
}

message WatchCatalogRequest {
  int32 interval_ms = 1;
  int32 max_updates = 2;
  string filter = 3; // new field (API extension example)
}

message CatalogUpdate {
  int64 sequence = 1;
  string text = 2;
  int64 server_time_unix_ms = 3;
  string version = 4; // new field
}

message CatalogEvent {
  string event_id = 1;
  string type = 2;
  string payload_json = 3;
  int64 client_time_unix_ms = 4;
}

message UploadSummary {
  int32 received_count = 1;
  int64 server_time_unix_ms = 2;
  string version = 3; // new field
}

message ChatMessage {
  string sender = 1;
  string text = 2;
  int64 time_unix_ms = 3;
  string correlation_id = 4; // new field
}
